Optimize block id filesize